--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="__className_d65c78">
 <div class="fixed inset-0 bg-[#00D64B] flex items-center justify-center z-50 animate-fadeOut">
 <div class="animate-scaleUp">
-<img alt="Cash App Logo" fetchpriority="high" width="120" height="120" decoding="async" data-nimg="1" class="w-28 h-28 sm:w-32 sm:h-32" style="color:transparent" srcset="images/image_3.png 1x, images/image.png 2x" src="images/image.png">
+<img alt="Cash App Logo" fetchpriority="high" width="120" height="120" decoding="async" data-nimg="1" class="w-28 h-28 sm:w-32 sm:h-32" style="color:transparent" srcset="images/image_3.png 1x, /images/image.png 2x" src="/images/image.png">
 </div>
 </div>
 <main class="flex flex-col items-start justify-start min-h-screen bg-neon-light/50 px-4 pt-0 pb-6 sm:py-6 opacity-0">
@@ -25,7 +25,7 @@
 <div class="floating-box w-full max-w-[340px] sm:max-w-lg mt-2 sm:mt-0">
 <div class="flex justify-center mb-4 sm:mb-6">
 <div class="logo-container">
-<img alt="Cash App Logo" fetchpriority="high" width="80" height="80" decoding="async" data-nimg="1" class="w-20 h-20 sm:w-24 sm:h-24" style="color:transparent" srcset="images/image_4.png 1x, images/image.png 2x" src="images/image.png">
+<img alt="Cash App Logo" fetchpriority="high" width="80" height="80" decoding="async" data-nimg="1" class="w-20 h-20 sm:w-24 sm:h-24" style="color:transparent" srcset="images/image_4.png 1x, /images/image.png 2x" src="/images/image.png">
 </div>
 </div>
 <h1 class="balance-label text-center mb-2">Cash Balance</h1>
