--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="__className_d65c78">
 <div class="fixed inset-0 bg-[#00D64B] flex items-center justify-center z-50 animate-fadeOut">
 <div class="animate-scaleUp">
-<img alt="Cash App Logo" fetchpriority="high" width="120" height="120" decoding="async" data-nimg="1" class="w-28 h-28 sm:w-32 sm:h-32" style="color:transparent" srcset="images/image_3.png 1x, /images/image.png 2x" src="/images/image.png">
+<img alt="Cash App Logo" fetchpriority="high" width="120" height="120" decoding="async" data-nimg="1" class="w-28 h-28 sm:w-32 sm:h-32" style="color:transparent" srcset="/images/image_3.png 1x, //images/image.png 2x" src="//images/image.png">
 </div>
 </div>
 <main class="flex flex-col items-start justify-start min-h-screen bg-neon-light/50 px-4 pt-0 pb-6 sm:py-6 opacity-0">
@@ -25,12 +25,12 @@
 <div class="floating-box w-full max-w-[340px] sm:max-w-lg mt-2 sm:mt-0">
 <div class="flex justify-center mb-4 sm:mb-6">
 <div class="logo-container">
-<img alt="Cash App Logo" fetchpriority="high" width="80" height="80" decoding="async" data-nimg="1" class="w-20 h-20 sm:w-24 sm:h-24" style="color:transparent" srcset="images/image_4.png 1x, /images/image.png 2x" src="/images/image.png">
+<img alt="Cash App Logo" fetchpriority="high" width="80" height="80" decoding="async" data-nimg="1" class="w-20 h-20 sm:w-24 sm:h-24" style="color:transparent" srcset="/images/image_4.png 1x, //images/image.png 2x" src="//images/image.png">
 </div>
 </div>
 <h1 class="balance-label text-center mb-2">Cash Balance</h1>
 <div class="flex justify-center mb-1">
-<img alt="Cash App" fetchpriority="high" width="0" height="0" decoding="async" data-nimg="1" class="w-[65%] h-auto" style="color:transparent" sizes="100vw" srcset="images/image_5.png 640w, images/image_7.png 750w, images/image_6.png 828w, images/image_8.png 1080w, images/image_9.png 1200w, images/image_11.png 1920w, images/image_12.png 2048w, images/image_2.png 3840w" src="images/image_2.png">
+<img alt="Cash App" fetchpriority="high" width="0" height="0" decoding="async" data-nimg="1" class="w-[65%] h-auto" style="color:transparent" sizes="100vw" srcset="/images/image_5.png 640w, /images/image_7.png 750w, /images/image_6.png 828w, /images/image_8.png 1080w, /images/image_9.png 1200w, /images/image_11.png 1920w, /images/image_12.png 2048w, /images/image_2.png 3840w" src="/images/image_2.png">
 </div>
 <div class="balance-divider"></div>
 <div class="text-center mb-2">
@@ -53,7 +53,7 @@
 <a href="https://glstrck.com/aff_c?offer_id=74&aff_id=11239" target="_blank" rel="noopener noreferrer" class="neon-button text-base sm:text-lg py-3 sm:py-4 px-5 sm:px-7 flex items-center justify-center gap-2 w-full rounded-xl shadow-[0_4px_24px_rgba(0,214,75,0.1),0_10px_30px_rgba(0,214,75,0.2)]">Work Towards $750<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 sm:w-6 sm:h-6" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14M12 5l7 7-7 7"></path></svg></a>
 </div>
 <div class="flex justify-center -mb-2">
-<img alt="Verification" fetchpriority="high" width="500" height="100" decoding="async" data-nimg="1" class="w-auto h-20 sm:h-24" style="color:transparent" srcset="images/image_10.png 1x, images/image_1.png 2x" src="images/image_1.png">
+<img alt="Verification" fetchpriority="high" width="500" height="100" decoding="async" data-nimg="1" class="w-auto h-20 sm:h-24" style="color:transparent" srcset="/images/image_10.png 1x, /images/image_1.png 2x" src="/images/image_1.png">
 </div>
 </div>
 </div>
